--- a/src/main/resources/templates/roomChat.html
+++ b/src/main/resources/templates/roomChat.html
@@ -102,6 +102,7 @@
   <div id="files">
   </div>
 </body>
+<script type="text/javascript" src="/js/adapter.js"></script>
 <script type="text/javascript" src="/js/chatRtc.js"></script>
 <script type="text/javascript" src="/js/safari.js"></script>
 <script type="text/javascript">
@@ -111,10 +112,6 @@
   var msgs = document.getElementById("msgs");
   var sendFileBtn = document.getElementById("sendFileBtn");
   var files = document.getElementById("files");
-  var suportAutoPlay = function(){
-  	let userAngent = window.navigator.userAgent.toLowerCase();
-  	return userAngent.indexOf("chrome")<0&&userAngent.indexOf("safari")>0;
-  }
   var rtc = chatRtc();
 
   /**********************************************************/
@@ -225,9 +222,6 @@
     newVideo.setAttribute("x5-playsinline","");
     newVideo.setAttribute("id", id);
     videos.appendChild(newVideo);
-    if(suportAutoPlay()){
-    	safariVedio(newVideo);
-    }
     rtc.attachStream(stream, id);
   });
   //删除其他用户
