--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -12,7 +12,7 @@
     <canvas id="canvas1" height="120px" ></canvas><hr />
     <input type="button" title="视频" value="视频" onclick="getVedio();" /><br />
     <canvas id="canvas2" height="120px"></canvas>
- 
+ 	<video id="video-wakakas" autoplay="" src="blob:https://localhost:8443/d0a8d0d2-3b36-41a3-b871-1db443ac0f3d"></video>
     <script type="text/javascript">
         var video = document.querySelector('video');
         var audio, audioType;
