--- a/src/main/resources/templates/roomChat.html
+++ b/src/main/resources/templates/roomChat.html
@@ -101,6 +101,7 @@
   <div id="files">
   </div>
 </body>
+<script type="text/javascript" src="/js/adapter.js"></script>
 <script type="text/javascript" src="/js/chatRtc.js"></script>
 <script type="text/javascript">
 //url(http://www.w3school.com.cn/i/eg_bg_01.gif) repeat fixed
